# NanTuanTracker

./: .gitignore  README.md  build-poller.sh  cdk.json  package-lock.json  package.json
lib/: nan_tuan_tracker_cdk-stack.ts
poller/: Cargo.toml
poller/src/: README.md  config.rs  errors.rs  main.rs
poller/src/client/: kook.rs  kook_client.rs  mod.rs
poller/src/provider/: mod.rs
poller/src/provider/stratz/: api.rs
poller/src/provider/stratz/assets/: latest_guild_matches.gql  stratz_schema.gql
poller/src/publisher/: kook.rs  mod.rs  publisher.rs  utils.rs  webhook.rs
poller/src/utils/: dynamo.rs
test/: nan_tuan_tracker_cdk.test.ts
