[package]
name = "poller"
version = "0.1.0"
edition = "2021"
authors = ["JunkangXu"]
include = ["/src/*.gql"]

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
chrono = "0.4.19"
graphql_client = "0.10.0"
lambda_runtime = "0.6"
log = "0.4"
reqwest = {version = "0.11.10", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
simple_logger = "2.3"
tokio = {version = "1", features = ["full"]}
webhook = "2.0.0"
openssl = { version = "0.10.35", features = ["vendored"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
